--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -142,18 +142,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1407328 entries, 0 to 1407327\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column      Non-Null Count    Dtype \n",
-      "---  ------      --------------    ----- \n",
-      " 0   Unnamed: 0  1407328 non-null  int64 \n",
-      " 1   headline    1407328 non-null  object\n",
-      " 2   url         1407328 non-null  object\n",
-      " 3   publisher   1407328 non-null  object\n",
-      " 4   date        1407328 non-null  object\n",
-      " 5   stock       1407328 non-null  object\n",
-      "dtypes: int64(1), object(5)\n",
-      "memory usage: 64.4+ MB\n"
+      "Index: 1407327 entries, 0 to 1407327\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count    Dtype              \n",
+      "---  ------            --------------    -----              \n",
+      " 0   headline          1407327 non-null  object             \n",
+      " 1   url               1407327 non-null  object             \n",
+      " 2   publisher         1407327 non-null  object             \n",
+      " 3   date              1407327 non-null  datetime64[ns, UTC]\n",
+      " 4   stock             1407327 non-null  object             \n",
+      " 5   headline_length   1407327 non-null  int64              \n",
+      " 6   sentiment         1407327 non-null  float64            \n",
+      " 7   hour              1407327 non-null  int32              \n",
+      " 8   publisher_domain  1407327 non-null  object             \n",
+      "dtypes: datetime64[ns, UTC](1), float64(1), int32(1), int64(1), object(5)\n",
+      "memory usage: 102.0+ MB\n"
      ]
     }
    ],
@@ -626,6 +629,37 @@
    "outputs": [],
    "source": [
     "df['hour'] = df['date'].dt.hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1407327 entries, 0 to 1407327\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column            Non-Null Count    Dtype              \n",
+      "---  ------            --------------    -----              \n",
+      " 0   url               1407327 non-null  object             \n",
+      " 1   publisher         1407327 non-null  object             \n",
+      " 2   date              1407327 non-null  datetime64[ns, UTC]\n",
+      " 3   stock             1407327 non-null  object             \n",
+      " 4   headline_length   1407327 non-null  int64              \n",
+      " 5   sentiment         1407327 non-null  float64            \n",
+      " 6   hour              1407327 non-null  int32              \n",
+      " 7   publisher_domain  1407327 non-null  object             \n",
+      "dtypes: datetime64[ns, UTC](1), float64(1), int32(1), int64(1), object(4)\n",
+      "memory usage: 91.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
