updated the anlysis with the updated date in task-1

--- a/notebooks/quantitative_analysis.ipynb
+++ b/notebooks/quantitative_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "      <td>Stocks That Hit 52-Week Highs On Friday</td>\n",
        "      <td>https://www.benzinga.com/news/20/06/16190091/s...</td>\n",
        "      <td>Benzinga Insights</td>\n",
-       "      <td>2020-06-05 10:30:54-04:00</td>\n",
+       "      <td>2020-06-05 14:30:54+00:00</td>\n",
        "      <td>A</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
@@ -62,7 +62,7 @@
        "      <td>Stocks That Hit 52-Week Highs On Wednesday</td>\n",
        "      <td>https://www.benzinga.com/news/20/06/16170189/s...</td>\n",
        "      <td>Benzinga Insights</td>\n",
-       "      <td>2020-06-03 10:45:20-04:00</td>\n",
+       "      <td>2020-06-03 14:45:20+00:00</td>\n",
        "      <td>A</td>\n",
        "      <td>42</td>\n",
        "    </tr>\n",
@@ -71,7 +71,7 @@
        "      <td>71 Biggest Movers From Friday</td>\n",
        "      <td>https://www.benzinga.com/news/20/05/16103463/7...</td>\n",
        "      <td>Lisa Levin</td>\n",
-       "      <td>2020-05-26 04:30:07-04:00</td>\n",
+       "      <td>2020-05-26 08:30:07+00:00</td>\n",
        "      <td>A</td>\n",
        "      <td>29</td>\n",
        "    </tr>\n",
@@ -80,7 +80,7 @@
        "      <td>46 Stocks Moving In Friday's Mid-Day Session</td>\n",
        "      <td>https://www.benzinga.com/news/20/05/16095921/4...</td>\n",
        "      <td>Lisa Levin</td>\n",
-       "      <td>2020-05-22 12:45:06-04:00</td>\n",
+       "      <td>2020-05-22 16:45:06+00:00</td>\n",
        "      <td>A</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
@@ -89,7 +89,7 @@
        "      <td>B of A Securities Maintains Neutral on Agilent...</td>\n",
        "      <td>https://www.benzinga.com/news/20/05/16095304/b...</td>\n",
        "      <td>Vick Meyer</td>\n",
-       "      <td>2020-05-22 11:38:59-04:00</td>\n",
+       "      <td>2020-05-22 15:38:59+00:00</td>\n",
        "      <td>A</td>\n",
        "      <td>87</td>\n",
        "    </tr>\n",
@@ -113,14 +113,14 @@
        "4  https://www.benzinga.com/news/20/05/16095304/b...         Vick Meyer   \n",
        "\n",
        "                       date stock  headline_length  \n",
-       "0 2020-06-05 10:30:54-04:00     A               39  \n",
-       "1 2020-06-03 10:45:20-04:00     A               42  \n",
-       "2 2020-05-26 04:30:07-04:00     A               29  \n",
-       "3 2020-05-22 12:45:06-04:00     A               44  \n",
-       "4 2020-05-22 11:38:59-04:00     A               87  "
+       "0 2020-06-05 14:30:54+00:00     A               39  \n",
+       "1 2020-06-03 14:45:20+00:00     A               42  \n",
+       "2 2020-05-26 08:30:07+00:00     A               29  \n",
+       "3 2020-05-22 16:45:06+00:00     A               44  \n",
+       "4 2020-05-22 15:38:59+00:00     A               87  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +132,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1407327 entries, 0 to 1407326\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column           Non-Null Count    Dtype              \n",
+      "---  ------           --------------    -----              \n",
+      " 0   headline         1407327 non-null  object             \n",
+      " 1   url              1407327 non-null  object             \n",
+      " 2   publisher        1407327 non-null  object             \n",
+      " 3   date             1407327 non-null  datetime64[ns, UTC]\n",
+      " 4   stock            1407327 non-null  object             \n",
+      " 5   headline_length  1407327 non-null  int64              \n",
+      "dtypes: datetime64[ns, UTC](1), int64(1), object(4)\n",
+      "memory usage: 64.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "financial_news.info()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +309,7 @@
        "4        0.0           0.0  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
